Fix the svg sticking out

--- a/_sass/_style.scss
+++ b/_sass/_style.scss
@@ -174,3 +174,7 @@ kbd {
   }
   font-size: 0.9em;
 }
+
+#graph-wrapper {
+  overflow-x: hidden; // TODO: size the SVG properly instead?
+}
